--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         
-            <figure>
+            <figure class="titulo">
                 <img src="imagens-icons/pata 1.png" alt="icone pata">
                 <h2>Fantastika</h2>
             </figure>
@@ -25,11 +25,34 @@
         </section>
     </header>
     <main>
-        <div class="banner">
-            <figure></figure>
-        </div>
+    <!-- LINHA-------1 -->
         <section>
+            <figure  class="line-1">
+                <h2>
+                    Boas vindas à
+                    nossa inauguração!
+                </h2>
+                <img class="pata" src="imagens-icons/pata 2.png" alt="pata">
+            </figure>
+        </section>
+    <!-- LINHA-------2 -->
+        <section class= "linha2">
 
+                <h2>
+                    Só banho e tosa?
+                </h2>
+                <p>
+                    O cuidado com seu cão é prioridade para nós. Possuímos toda estrutura necessária para cuidar da saúde, higiene e bem estar emocional do seu pet.
+                </p>
+        <figure class="pitbull">
+            <img src="imagens-icons/pitbul.png" alt="pitbull">
+        </figure>
+        </section>
+    <!-- LINHA-------3 -->
+        <section class="">
+<figure>
+    <img src="imagens-icons/dog.png" alt="">
+</figure>
         </section>
     </main>
 </body>
