--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </header>
     <main>
     <!-- LINHA-------1 -->
-        <section>
-            <figure  class="line-1">
+        <section class="primeiraSessao">
+            <figure class="boasVindas" >
                 <h2>
                     Boas vindas à
                     nossa inauguração!
@@ -35,25 +35,42 @@
                 <img class="pata" src="imagens-icons/pata 2.png" alt="pata">
             </figure>
         </section>
-    <!-- LINHA-------2 -->
-        <section class= "linha2">
+        <!-- LINHA-------2 -->
+        <section class="segundaSessao">
+            <h1>Só banho e tosa?</h1>
+            <p class="firstP">
+                O cuidado com seu cão é
+                prioridade para nós. 
+                Possuímos 
+                toda estrutura necessária 
+                para cuidar da saúde, higiene e
+                 bem estar emocional do seu pet.
+            </p>
+            <figure class="pitbul">
 
-                <h2>
-                    Só banho e tosa?
-                </h2>
-                <p>
-                    O cuidado com seu cão é prioridade para nós. Possuímos toda estrutura necessária para cuidar da saúde, higiene e bem estar emocional do seu pet.
-                </p>
-        <figure class="pitbull">
-            <img src="imagens-icons/pitbul.png" alt="pitbull">
-        </figure>
+           </figure>
         </section>
-    <!-- LINHA-------3 -->
-        <section class="">
-<figure>
-    <img src="imagens-icons/dog.png" alt="">
-</figure>
+         <!-- LINHA-------3 -->
+        <section class="terceiraSessao">
+
+            <figure class="dog">
+
+            </figure>
+            <h1>Mordomia 
+                saldável</h1>
+            <p class="secondP">
+                Temos um espaço dedicado 
+                a saúde e higiene canina, com ]
+                ambientes para interação social 
+                entre cães com período 
+                monitorado, massagem e terapia.
+            </p>
+        </section>
+         <!-- LINHA-------4 -->
+        <section class="agradecimentos">
+            
         </section>
     </main>
+    <footer></footer>
 </body>
 </html>
