--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <section>
             <nav>
-               <ul>
+               <ul class="nav-1">
                 <li><a href="#"><img class="sumir" src="imagens-icons/insta 1.png" alt=""></a></li>
                 <li><a href="#"><img src="imagens-icons/whatsapp 1.png" alt=""></a></li>
                 <li><a href="#"><img class="sumir" src="imagens-icons/youtube 1.png" alt=""></a></li>
@@ -37,6 +37,7 @@
         </section>
         <!-- LINHA-------2 -->
         <section class="segundaSessao">
+            <div>
             <h1>Só banho e tosa?</h1>
             <p class="firstP">
                 O cuidado com seu cão é
@@ -46,6 +47,7 @@
                 para cuidar da saúde, higiene e
                  bem estar emocional do seu pet.
             </p>
+            </div>
             <figure class="pitbul">
 
            </figure>
@@ -56,21 +58,31 @@
             <figure class="dog">
 
             </figure>
-            <h1>Mordomia 
-                saldável</h1>
-            <p class="secondP">
-                Temos um espaço dedicado 
-                a saúde e higiene canina, com ]
-                ambientes para interação social 
-                entre cães com período 
-                monitorado, massagem e terapia.
-            </p>
+            <div>
+                <h1>Mordomia 
+                    saldável</h1>
+                <p class="secondP">
+                    Temos um espaço dedicado 
+                    a saúde e higiene canina, com ]
+                    ambientes para interação social 
+                    entre cães com período 
+                    monitorado, massagem e terapia.
+                </p>
+            </div>
         </section>
          <!-- LINHA-------4 -->
         <section class="agradecimentos">
             
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section>
+           <h2>atendimento</h2>
+           <ul>
+            <li>sobre</li>
+            <li>contato</li>
+           </ul>
+        </section>
+    </footer>
 </body>
 </html>
