--- a/index.html
+++ b/index.html
@@ -72,17 +72,25 @@
         </section>
          <!-- LINHA-------4 -->
         <section class="agradecimentos">
-            
+            <h3><span>Apoio:</span></h3>
+        <h2>Havaianas</h2>
+        <h2>Americanas</h2>
         </section>
     </main>
     <footer>
-        <section>
-           <h2>atendimento</h2>
-           <ul>
-            <li>sobre</li>
-            <li>contato</li>
-           </ul>
-        </section>
+            <div class="atendimento">
+                <h2>Atendimento</h2>
+                <ul>
+                <li>Chat Virtual</li>
+                <li>Whatsapp</li>
+                <li>Telefone</li>
+                <li>Email</li>
+            </ul>
+            </div>
+                <h2>Sobre</h2>
+                <h2>Unidades</h2>
+            <div class="divInfo">
+            </div>
     </footer>
 </body>
 </html>
