--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </main>
     <footer>
             <div class="atendimento">
-                <h2>Atendimento</h2>
+                <h2> Atendimento</h2>
                 <ul>
                 <li>Chat Virtual</li>
                 <li>Whatsapp</li>
@@ -87,9 +87,8 @@
                 <li>Email</li>
             </ul>
             </div>
-                <h2>Sobre</h2>
-                <h2>Unidades</h2>
-            <div class="divInfo">
+            <div class="Info">
+                
             </div>
     </footer>
 </body>
