--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Serif:opsz,wght@8..144,500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="imagens-icons/pata 1.png">
     <title>FANTASTIKA</title>
 </head>
 <body>
@@ -38,15 +40,17 @@
         <!-- LINHA-------2 -->
         <section class="segundaSessao">
             <div>
-            <h1>Só banho e tosa?</h1>
-            <p class="firstP">
-                O cuidado com seu cão é
+            <h1>Só banho e tosa ?</h1>
+            <p class="firstP">O cuidado com seu cão é
                 prioridade para nós. 
                 Possuímos 
                 toda estrutura necessária 
                 para cuidar da saúde, higiene e
                  bem estar emocional do seu pet.
-            </p>
+                </p>
+                <button>
+                 Fale conosco
+                </button>
             </div>
             <figure class="pitbul">
 
@@ -87,8 +91,26 @@
                 <li>Email</li>
             </ul>
             </div>
-            <div class="Info">
-                
+            <div class="atendimento">
+                <h2> Atendimento</h2>
+                <ul>
+
+            
+                    <li>Chat Virtual</li>
+                    <li>Whatsapp</li>
+                    <li>Telefone</li>
+                    <li>Email</li>
+                </ul>
+            </div>
+            <div class="atendimento">
+
+                    <h2> Atendimento</h2>
+                    <ul>
+                    <li>Chat Virtual</li>
+                    <li>Whatsapp</li>
+                    <li>Telefone</li>
+                    <li>Email</li>
+                </ul>
             </div>
     </footer>
 </body>
