--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- LINHA-------1 -->
         <section class="primeiraSessao">
             <figure class="boasVindas" >
-                <h2>
+                <h2 class="Boas">
                     Boas vindas à
                     nossa inauguração!
                 </h2>
@@ -40,7 +40,7 @@
         <!-- LINHA-------2 -->
         <section class="segundaSessao">
             <div>
-            <h1>Só banho e tosa ?</h1>
+            <h1 class="banho">Só banho e tosa?</h1>
             <p class="firstP">O cuidado com seu cão é
                 prioridade para nós. 
                 Possuímos 
@@ -63,27 +63,32 @@
 
             </figure>
             <div>
-                <h1>Mordomia 
+                <h1 class="Mordomia">Mordomia 
                     saldável</h1>
                 <p class="secondP">
                     Temos um espaço dedicado 
-                    a saúde e higiene canina, com ]
+                    a saúde e higiene canina, com
                     ambientes para interação social 
                     entre cães com período 
                     monitorado, massagem e terapia.
                 </p>
+                <button>
+                    Fale conosco
+                   </button>
             </div>
         </section>
          <!-- LINHA-------4 -->
         <section class="agradecimentos">
-            <h3><span>Apoio:</span></h3>
-        <h2>Havaianas</h2>
-        <h2>Americanas</h2>
+            <h3 class="apoio">apoio:</h3>
+        <h2 class="chinelo">Havaianas</h2>
+        <h2 class="americanas">americanas</h2>
         </section>
     </main>
     <footer>
+        <section>
+
             <div class="atendimento">
-                <h2> Atendimento</h2>
+                <h2 class="footertitle"> Atendimento</h2>
                 <ul>
                 <li>Chat Virtual</li>
                 <li>Whatsapp</li>
@@ -112,6 +117,8 @@
                     <li>Email</li>
                 </ul>
             </div>
+            
+        </section>
     </footer>
 </body>
 </html>
