--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     entre cães com período 
                     monitorado, massagem e terapia.
                 </p>
-                <button>
+                <button class="botao">
                     Fale conosco
                    </button>
             </div>
@@ -97,24 +97,24 @@
             </ul>
             </div>
             <div class="atendimento">
-                <h2> Atendimento</h2>
+                <h2 class="footertitle">Sobre</h2>
                 <ul>
 
             
-                    <li>Chat Virtual</li>
-                    <li>Whatsapp</li>
-                    <li>Telefone</li>
-                    <li>Email</li>
+                    <li>Nosso trabalho</li>
+                    <li>infraestrutura</li>
+                    <li>Nossas unidades</li>
+                    <li>Especialistas</li>
                 </ul>
             </div>
             <div class="atendimento">
 
-                    <h2> Atendimento</h2>
+                    <h2 class="footertitle">Unidades</h2>
                     <ul>
-                    <li>Chat Virtual</li>
-                    <li>Whatsapp</li>
-                    <li>Telefone</li>
-                    <li>Email</li>
+                    <li>Clínica RJ</li>
+                    <li>Clínica SP</li>
+                    <li>Clínica ES</li>
+                    <li>Clínica SC</li>
                 </ul>
             </div>
             
