--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <section>
             <nav>
                <ul class="nav-1">
-                <li><a href="#"><img class="sumir" src="imagens-icons/insta 1.png" alt=""></a></li>
-                <li><a href="#"><img src="imagens-icons/whatsapp 1.png" alt=""></a></li>
-                <li><a href="#"><img class="sumir" src="imagens-icons/youtube 1.png" alt=""></a></li>
+                <li><a href="#"><img class="sumir" src="imagens-icons/insta 1.png" alt="Instagram"></a></li>
+                <li><a href="#"><img src="imagens-icons/whatsapp 1.png" alt="Whatsapp"></a></li>
+                <li><a href="#"><img class="sumir" src="imagens-icons/youtube 1.png" alt="youtube"></a></li>
                </ul>
             </nav>
         </section>
@@ -86,7 +86,15 @@
     </main>
     <footer>
         <section>
-
+            <figure class="titulo-2">
+                <img src="imagens-icons/pata 1.png" alt="icone pata">
+                <h2>Fantastika</h2>
+            </figure>
+        <figure class="aparecer">
+            <li><a href="#"><img src="imagens-icons/whatsapp 1.png" alt="whatsapp"></a></li>
+            <li><a href="#"><img src="imagens-icons/youtube 1.png" alt="youtube"></a></li>
+            <li><a href="#"><img src="imagens-icons/insta 1.png" alt="Instagram"></a></li>
+        </figure>
             <div class="atendimento">
                 <h2 class="footertitle"> Atendimento</h2>
                 <ul>
