--- a/index.html
+++ b/index.html
@@ -106,12 +106,11 @@
             </div>
             <div class="atendimento">
                 <h2 class="footertitle">Sobre</h2>
-                <ul>
-
+                <ul class="li-2">
             
                     <li>Nosso trabalho</li>
                     <li>infraestrutura</li>
-                    <li>Nossas unidades</li>
+                    <li>Unidades</li>
                     <li>Especialistas</li>
                 </ul>
             </div>
