--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </figure>
             <div>
                 <h1 class="Mordomia">Mordomia 
-                    saldável</h1>
+                    saudável</h1>
                 <p class="secondP">
                     Temos um espaço dedicado 
                     a saúde e higiene canina, com
